CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)

PROJECT(Orbits)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

set(CMAKE_VERBOSE_MAKEFILE ON)

include_directories(
	"${CMAKE_SOURCE_DIR}/razter/include"
)

add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/razter")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/src")